compiler-plugin/src/testData/errors/AnnotationExportNonExportedAnnotationParam.kt
package errors

@ExportAnnotation
annotation class TestAnnotation(<!SYMBOL_EXPORT_EXPORTED_ANNOTATION_ANNOTATION_PROPERTY_NOT_EXPORTED!>val a: TestAnnotation2<!>)

<!EXPORTED_MARKER_Classifier(packageName=[errors], classNames=[TestAnnotation2])!>@ExportSymbol
annotation class TestAnnotation2<!>